# phyml

./: .project  BUGS.md  Forum.md  GSoC2013.md  INSTALL  Makefile.am  Makefile_mc.am  Makefile_r.am  ProjectHome.md  README  alrt.c  beagle.supp  cl.c  configure.ac  configure.in  configure_mc.ac  configure_rf.ac  confmc  confphy  confr  draw.c  eigen.c  eigen.h  free.c  free.h  interface.c  lk.c  lk.h  m4.c  main.c  mc.c  mcmc.c  models.c  mpi_boot.c  mpi_boot.h  numeric.c  numeric.h  optimiz.c  optimiz.h  options.c  (+13 more)
branches/beagle/: configure.ac
branches/beagle/gui/src/: InputDataPanel.java  StandardOutPanel.java  callPHYML.java
branches/beagle/src/: Makefile.am  alrt.c  beagle_utils.c  beagle_utils.h  bionj.c  cl.c  draw.c  free.c  init.c  io.c  io.h  lk.c  main.c  make.c  mcmc.c  mixt.c  models.c  mpi_boot.c  optimiz.c  pars.c  simu.c  spr.c  stats.c  stats.h  utilities.c  utilities.h
branches/parallel/gui/src/: CmdExec.java  DataTypePhyml.java  FreqPanel.java  OptBraLenAndTreTop.java  OptTopologyAndStartingTree.java  OptimiseFreqAndRatio.java  PhymlFrame.java  ProportionAndSubrate.java  SubModel.java  TreeSearchingPanel.java
branches/parallel/src/: sergeii.c
branches/revision_179/: Makefile.am  cl.c  confmc  confphy  interface.c  lk.c  main.c  mg.c  models.c  models.h  mpi_boot.c  mpi_boot.h  numeric.h  optimiz.c  options.c  phyml_package.pl  rwrapper.c  simu.c  spr.c  utilities.c  utilities.h
doc/: Makefile.am  phyml-manual.tex  phyml_manual.tex
gui/: README  README.md
gui/src/: AddRanStaTreAndNumRanStaTre.java  BooStrAndAprLikRatTes.java  InputDataPanel.java  NumSubCatGammaAverage.java  OptBraLenAndTreTop.java  OptTopologyAndStartingTree.java  OptimiseFreqAndRatio.java  PhymlFrame.java  PhymlMain.java  PhymlPanel.java  SeqFile.java  StandardOutPanel.java  SubModel.java  TreeSearchingPanel.java  UnpackTestDataFile.java  callPHYML.java
gui/src/main/java/phyml/: NumSubCatGammaAverage.java  OptimiseFreqAndRatio.java  SubModel.java
src/: Makefile.am  Makefile_mc.am  Makefile_r.am  alrt.c  beagle_utils.c  beagle_utils.h  bionj.c  cl.c  cl.h  draw.c  draw.h  eigen.c  eigen.h  free.c  free.h  geo.c  geo.h  help.c  init.c  init.h  interface.c  io.c  io.h  lk.c  lk.h  m4.c  m4.h  main.c  make.c  make.h  mc.c  mc.h  mcmc.c  mcmc.h  mg.c  mixt.c  mixt.h  models.c  models.h  mpi_boot.c  (+29 more)
trunk/: INSTALL  Makefile.am  Makefile_mc.am  Makefile_r.am  alrt.c  bionj.c  cl.c  configure.ac  configure.in  configure_mc.ac  configure_r.ac  confmc  confphy  confr  eigen.c  eigen.h  free.c  free.h  interface.c  lk.c  lk.h  m4.c  main.c  mc.c  mcmc.c  mcmc.h  mg.c  models.c  models.h  mpi_boot.c  nucleic  numeric.c  numeric.h  optimiz.c  optimiz.h  options.c  pars.c  phyml_package.pl  proteic  rates.c  (+9 more)
trunk/doc/: phyml-manual.tex  phyml_manual.tex
trunk/gui/src/: AddRanStaTreAndNumRanStaTre.java  BooStrAndAprLikRatTes.java  BranchSupport.java  CmdExec.java  CustomGridLayout.java  DataTypePhyml.java  FileUpload.java  FreqPanel.java  NumDataSets.java  NumSubCatGammaAverage.java  OptBraLenAndTreTop.java  OptTopologyAndStartingTree.java  OptimiseFreqAndRatio.java  PhymlMain.java  ProportionAndSubrate.java  Separator.java  StandardOutPanel.java  SubModel.java  SubstitutionModelPhyml.java  UnpackExecutableFile.java  callPHYML.java
trunk/gui/src/main/java/phyml/: ProportionAndSubrate.java  SubstitutionModelPhyml.java
trunk/src/: Makefile.am  Makefile_r.am  alrt.c  alrt.h  beagle_utils.c  beagle_utils.h  bionj.c  bionj.h  cl.c  cl.h  draw.c  draw.h  eigen.c  free.c  free.h  geo.c  geo.h  help.c  init.c  init.h  interface.c  interface.h  io.c  io.h  lk.c  lk.h  m4.c  main.c  make.c  make.h  mc.c  mc.h  mcmc.c  mcmc.h  mg.c  mg.h  mixt.c  mixt.h  models.c  models.h  (+24 more)
wiki/: BUGS.wiki  Downloads.wiki  Forum.wiki  GSoC2013.wiki  PageName.wiki  TODO.wiki
